@@ -2,6 +2,7 @@ package com.rhuangal.springreactiveexample;
 
 import com.rhuangal.springreactiveexample.domain.Product;
 import com.rhuangal.springreactiveexample.repository.ProductRepository;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
@@ -11,6 +12,7 @@ import java.math.BigDecimal;
 import java.util.Arrays;
 
 @SpringBootApplication
+@Slf4j
 public class SpringReactiveExampleApplication implements CommandLineRunner {
 
 	@Autowired
@@ -24,11 +26,11 @@ public class SpringReactiveExampleApplication implements CommandLineRunner {
 	public void run(String... args) throws Exception {
 
 		// save list Customers
-		productRepository.saveAll(Arrays.asList(new Product(new Long(1), "LAPICERO", new BigDecimal(4.00),"COLOR AZUL", "/lapicero"),
-				new Product(new Long(2), "TEMPERA", new BigDecimal(1.00),"COLOR AZUL", "/tempera"),
-				new Product(new Long(3), "CARTULINA", new BigDecimal(2.30),"COLOR AZUL", "/catulina"),
-				new Product(new Long(4), "PLUMON", new BigDecimal(6.00),"COLOR AZUL", "/plumon")
+		productRepository.saveAll(Arrays.asList(new Product(Long.valueOf("1"), "LAPICERO", BigDecimal.valueOf(4.00),"STABILO COLOR AZUL", "/lapicero"),
+				new Product(Long.valueOf("2"), "TEMPERA", BigDecimal.valueOf(3.00),"COLOR ROJO", "/tempera"),
+				new Product(Long.valueOf("3"), "CARTULINA", BigDecimal.valueOf(2.30),"COLOR AMARILLO", "/catulina"),
+				new Product(Long.valueOf("4"), "PLUMON", BigDecimal.valueOf(6.00),"STABILO COLOR VERDE", "/plumon")
 				)
-		).subscribe(System.out::println);
+		).log();
 	}
 }
